# tinyrenderer-learn

./: .gitignore  CMakeLists.txt  README.md  firstexample.cpp  makefile
src/: firstexample.cpp
